--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,52 +28,12 @@
        android:layout_marginTop="10dp"
        android:layout_height="30dp" />
    <Button
-          android:text="recycleView1"
-          android:textAllCaps="false"
-          android:layout_marginTop="10dp"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:onClick="clickToRecycleView1"/>
-   <Button
-          android:text="瀑布流"
-          android:textAllCaps="false"
-          android:layout_marginTop="10dp"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:onClick="clickToRecycleView2"/>
-   <Button
-          android:text="本地相册"
-          android:textAllCaps="false"
-          android:layout_marginTop="10dp"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:onClick="clickToPhoto"/>
-   <Button
-          android:text="网络相册"
-          android:textAllCaps="false"
-          android:layout_marginTop="10dp"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:onClick="clickToInternetPhoto"/>
-   <Button
-          android:text="swipcards"
-          android:textAllCaps="false"
-          android:layout_marginTop="10dp"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:onClick="clickToTestSwipeCards"/>
-   <Button
-          android:text="DrawLayout"
-          android:textAllCaps="false"
-          android:layout_marginTop="10dp"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:onClick="clickToDrawLayoutActivity"/>
-   <Button
-          android:text="微信登录分享"
-          android:textAllCaps="false"
-          android:layout_marginTop="10dp"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:onClick="WeixinShare"/>
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:text="Main2"
+       android:textAllCaps="true"
+       android:onClick="clickToMain2"
+       android:layout_marginTop="10dp"
+       />
+
 </LinearLayout>
