--- a/app/src/main/res/values-w820dp/attrs.xml
+++ b/app/src/main/res/values-w820dp/attrs.xml
@@ -28,5 +28,15 @@
         <!-- 动画执行时间 -->
         <attr name="duration" format="integer"></attr>
     </declare-styleable>
-
+    <declare-styleable name="Rotate3dAnimation">
+        <attr name="rollType" format="enum">
+            <enum name="x" value="0"/>
+            <enum name="y" value="1"/>
+            <enum name="z" value="2"/>
+        </attr>
+        <attr name="fromDeg" format="float" />
+        <attr name="toDeg" format="float" />
+        <attr name="pivotX" format="fraction"/>
+        <attr name="pivotY" format="fraction" />
+    </declare-styleable>
 </resources>
